fixed merge errors

--- a/src/frames/GamePanel.form
+++ b/src/frames/GamePanel.form
@@ -44,10 +44,10 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="frames.pnlCardSelect" name="pnlCardSelect2">
+    <Component class="frames.pnlCardSelect" name="pnlCardSelect">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="250" y="140" width="-1" height="-1"/>
+          <AbsoluteConstraints x="210" y="110" width="800" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
